--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="nav container">
             <a href="" class="nav__logo">
                 <i class="ri-steering-fill"></i>
-                NextCar
+                WebCar
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -176,7 +176,7 @@
         <!--==================== POPULAR ====================-->
         <section class="popular section" id="popular">
             <h2 class="section__title">
-                Choose Your Electric Car <br> of Porshche Brand
+                Escolha o seu carro elétrico <br> da marca Porsche
             </h2>
             <div class="popular__container container swiper">
                 <div class="swiper-wrapper">
@@ -510,7 +510,7 @@
             <div class="footer__content">
                 <a href="#" class="footer__logo">
                     <i class="ri-steering-line"></i>
-                    NextCar
+                    WebCar
                 </a>
                 <p class="footer__description">
                     Nós oferecemos os melhores carros do mundo
@@ -576,11 +576,6 @@
                 </ul>
             </div>
         </div>
-        <span class="footer__copy">
-            &#169; <a target="_blank" href="abdullahmoin.web.app" class="footer__dev-link">abdullah-moin.</a> All rigths
-            reserved
-            <p id="date"></p>
-        </span>
     </footer>
 
 
