melhorias da tela

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
 
                 </div>
-
+<!-- 
                 <a href="#" class="home__button">INICIO</a>
 
                 <div class="slider__bg">
@@ -120,7 +120,7 @@
                     <div class="slider__bg-navBtn"></div>
                     <div class="slider__bg-navBtn"></div>
 
-                </div>
+                </div> -->
 
 
 
